# molar_vis

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md
.cargo/: config.toml
.github/workflows/: pages.yml
crates/molar_vis/: Cargo.toml
crates/molar_vis/src/: main.rs
crates/molar_vis_core/: Cargo.toml
crates/molar_vis_core/src/: app.rs  camera.rs  color.rs  data.rs  geometry.rs  history.rs  interactions.rs  launch.rs  lib.rs  material.rs  minimize.rs  moldata.rs  pick.rs  render.rs  scene.rs  script.rs  secstruct.rs  session.rs  settings.rs  spatial.rs  suggest.rs  theme.rs  trajectory.rs
crates/molar_vis_core/src/app/: build.rs  console.rs  draw.rs  draw_input.rs  export.rs  init.rs  loaders.rs  overlay.rs  panels.rs  pickers.rs  rep_panel.rs  session_io.rs  settings_dialog.rs  viewport.rs  widgets.rs
crates/molar_vis_core/src/data/: bonds.rs  loader.rs  traj_loader.rs  traj_wasm.rs
crates/molar_vis_core/src/geometry/: cartoon.rs  surface.rs
crates/molar_vis_core/src/render/: background.rs  camera_uniform.rs  cylinder.rs  floor.rs  line.rs  mesh.rs  raytrace.rs  sphere.rs  ssao.rs
crates/molar_vis_core/src/render/shaders/: background.wgsl  cylinder.wgsl  floor.wgsl  line.wgsl  mesh.wgsl  oit_composite.wgsl  raytrace.wgsl  sphere.wgsl  ssao.wgsl
crates/molar_vis_core/src/script/: command.rs  console.rs
crates/molar_vis_js/: Cargo.toml  README.md
crates/molar_vis_js/src/: lib.rs
crates/molar_vis_js/web/: index.html
crates/molar_vis_py/: Cargo.toml  pyproject.toml
crates/molar_vis_py/src/: lib.rs
crates/molar_vis_web/: Cargo.toml  index.html
crates/molar_vis_web/src/: main.rs
crates/vmd_rs/: Cargo.toml
crates/vmd_rs/src/: main.rs
crates/vmd_rs_core/: Cargo.toml
crates/vmd_rs_core/src/: app.rs  camera.rs  color.rs  data.rs  geometry.rs  history.rs  launch.rs  lib.rs  render.rs  scene.rs  secstruct.rs  theme.rs
crates/vmd_rs_core/src/data/: bonds.rs  loader.rs
crates/vmd_rs_core/src/geometry/: cartoon.rs
crates/vmd_rs_core/src/render/: camera_uniform.rs  cylinder.rs  mesh.rs  metaball.rs
crates/vmd_rs_core/src/render/shaders/: cylinder.wgsl  line.wgsl  mesh.wgsl  metaball.wgsl  metaball_bake.wgsl  sphere.wgsl
tests/: README.md  jak2_inhs.sd  ligands20.sdf
