[workspace]
members = ["crates/molar_vis_core", "crates/molar_vis"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Artistic-2.0"
authors = ["Semen Yesylevskyy"]
repository = "https://github.com/yesint/molar_vis"

[workspace.dependencies]
egui = "0.34"
eframe = { version = "0.34", default-features = false, features = [
    "wgpu",
    "default_fonts",
    "wayland",
    "x11",
] }
egui-wgpu = "0.34"
wgpu = "29"
glam = "0.32"
bytemuck = { version = "1", features = ["derive"] }
log = "0.4"
# Local molar checkout (default features => Float = f32). Added to molar_vis_core at M1.
molar = { path = "../molar/molar", default-features = false }

# Develop powersasa (ours) from the local clone so molar's new surface-mesh API
# is available through the path-dep on molar. Drop/bump once pushed & released.
[patch."https://github.com/yesint/powersasa-llm.git"]
powersasa = { path = "../powersasa-llm" }

# Debuggable own-code, fast dependencies (wgpu/molar hot loops) in dev builds.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
