[workspace]
members = ["crates/molar_vis_core", "crates/molar_vis", "crates/molar_vis_web"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Artistic-2.0"
authors = ["Semen Yesylevskyy"]
repository = "https://github.com/yesint/molar_vis"

[workspace.dependencies]
egui = "0.34"
eframe = { version = "0.34", default-features = false, features = [
    "wgpu",
    "default_fonts",
    "wayland",
    "x11",
] }
egui-wgpu = "0.34"
wgpu = "29"
glam = "0.32"
bytemuck = { version = "1", features = ["derive"] }
log = "0.4"
# molar (default features => Float = f32), from GitHub so the crate is installable
# without a local sibling checkout. molar pulls its own powersasa git dependency.
# Pinned to the rev with wasm runtime support (web-time clock + serial rayon shim).
molar = { git = "https://github.com/yesint/molar.git", rev = "ea33c5f9a034f4fbce6ff1bdfbcd09cac5e29bfd", default-features = false }

# Debuggable own-code, fast dependencies (wgpu/molar hot loops) in dev builds.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
