[workspace]
members = ["crates/molar_vis_core", "crates/molar_vis", "crates/molar_vis_web", "crates/molar_vis_py"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Artistic-2.0"
authors = ["Semen Yesylevskyy"]
repository = "https://github.com/yesint/molar_vis"

[workspace.dependencies]
egui = "0.34"
eframe = { version = "0.34", default-features = false, features = [
    "wgpu",
    "default_fonts",
    "wayland",
    "x11",
] }
egui-wgpu = "0.34"
wgpu = "29"
glam = { version = "0.32", features = ["serde"] }
bytemuck = { version = "1", features = ["derive"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# molar (default features => Float = f32), from GitHub so the crate is installable
# without a local sibling checkout. molar pulls its own powersasa git dependency.
# Pinned to the rev with molecular perception (rings/aromaticity/implicit-H) + SDF io
# + bonds-carry-order (Vec<Bond>) + the wasm runtime support + structured selection
# parse errors (SyntaxError: offset/span/expected) + `Sel::bind_to` (disjoint parts
# bind) + pub pymolar accessors + molar_python as rlib with `register_molar` (for the
# native Python module).
molar = { git = "https://github.com/yesint/molar.git", rev = "ae3b3d8", default-features = false }
# pymolar (PyO3 bindings), as an rlib, for the native molar_vis Python module only.
# Same git rev as `molar` above so the molar types unify across the dependency graph.
# ae3b3d8 adds the State coords-version counter the live shared-render path polls.
molar_python = { git = "https://github.com/yesint/molar.git", rev = "ae3b3d8" }
# Pure-Rust embedded scripting language for the in-app command console (native + wasm).
# default-features=false + "std" == Rhai's own default; single-threaded (no "sync"), no time deps.
rhai = { version = "1", default-features = false, features = ["std"] }

# Debuggable own-code, fast dependencies (wgpu/molar hot loops) in dev builds.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
