[package]
name = "molar_vis_core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "molar_vis_core"
path = "src/lib.rs"

[dependencies]
egui.workspace = true
eframe.workspace = true
egui-wgpu.workspace = true
wgpu.workspace = true
glam.workspace = true
bytemuck.workspace = true
log.workspace = true
molar = { workspace = true }
egui-phosphor = "0.12.0"

# Native file-open dialog for loading trajectories. Target-gated so cargo never
# tries to resolve/build it for wasm32 (the browser will use its own file picker).
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd = "0.15"
