[package]
name = "molar_vis_core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "molar_vis_core"
path = "src/lib.rs"

[dependencies]
egui.workspace = true
eframe.workspace = true
egui-wgpu.workspace = true
wgpu.workspace = true
glam.workspace = true
bytemuck.workspace = true
log.workspace = true
molar = { workspace = true }
rhai = { workspace = true }
egui-phosphor = "0.12.0"
serde = { workspace = true }
serde_json = { workspace = true }

# Native file-open dialog for loading trajectories. Target-gated so cargo never
# tries to resolve/build it for wasm32 (the browser uses rfd's async web picker).
# `directories` resolves the platform config dir for the persisted settings file
# (`~/.config/molar_vis/settings.json` on Linux); the wasm build has no filesystem
# and keeps settings in memory, so it's native-only too.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd = "0.15"
directories = "5"

# Browser runtime: the eframe `WebRunner` entry (`launch::run_web`) needs the
# canvas + async glue; `wgpu`'s `webgl` feature gives a WebGL2 fallback for
# browsers without WebGPU; `getrandom`'s `wasm_js` backend (+ the matching cfg in
# `.cargo/config.toml`) keeps transitive RNG users from panicking. The file picker
# is implemented directly on `web-sys` (`<input type=file>` + `Blob::array_buffer`)
# since rfd's build script doesn't support wasm32-unknown-unknown.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"
console_log = "0.2"
getrandom = { version = "0.3", features = ["wasm_js"] }
wgpu = { workspace = true, features = ["webgl"] }
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "HtmlElement",
    "HtmlCanvasElement",
    "HtmlInputElement",
    "Event",
    "EventTarget",
    "File",
    "FileList",
    "Blob",
] }
